--- a/css/tidy.css
+++ b/css/tidy.css
@@ -67,7 +67,7 @@ a:active
 
 .content-card	
 {
-	width: 60%; 
+	width: 70%; 
 	background-color: #fff; 
 	margin: auto; 
 	margin-top: 15%; 
@@ -115,36 +115,11 @@ a:active
 
 .content-works
 {
-	width: 60%; 
+	width: 70%; 
 	background-color: transparent; 
 	margin: auto;
 	overflow: auto;
 	position: relative;
-    padding: 10px 0 10px 0;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    justify-content: space-between;
-    -webkit-justify-content: space-between;
-    flex-wrap: wrap;
-    -webkit-flex-wrap: wrap;
-}
-
-.screenshot-item
-{
-    width: 24%;
-}
-
-.screenshot-item a img
-{
-    width: 100%;
-}
-
-.featherlight .featherlight-image
-{
-    height: 100% !important;
-    width: auto !important;
-    margin: 0 auto;
 }
 
 .intertext-padding
@@ -154,19 +129,17 @@ a:active
 
 .cover-image 
 {
-	background-image:url(../img/appsite_hero.png);
+	background-image:url(../img/cover_image.jpg);
 	background-size:cover;
 	background-position:center;
-	height:100%;
+	height:50%;
 	width:100%;
 	top:0;
-	position:fixed;
+	position:absolute;
 }
 
 .icon-and-title-flex
 {
-	display: -ms-flexbox;
-	display: -webkit-flex;
 	display: flex; 
 	align-items: center; 
 	flex-wrap: wrap
@@ -174,18 +147,21 @@ a:active
 
 .appicon
 {
-	width: 152px;
-	height: 152px;
-    margin-right: 2em;
+	width: 192px;
+	height: 192px;
 }
 
+.title-container
+{
+	margin-left: 2em;
+}
 
 .details-icon
 {
 	color: #555;
 	width: 1.4em;
 	height: 1.4em;
-	margin-right: 3em;
+	padding-left: 5em;
 }
 
 .text-title
@@ -197,25 +173,23 @@ a:active
 
 .text-subtitle
 {
-	font-size: 1.2em;
-	font-weight: 400;
-	color: #777;
+	font-size: 1.8em;
+	font-weight: 300;
+	color: #444;
 }
 
 .text-description
 {
 	word-wrap: break-word;
-	font-size: 1em;
-	font-weight: 400;
-    line-height: 1.5em;
+	font-size: 1.3em;
+	font-weight: 300;
 	color: #111;
 }
 
 .detail-item
 {
-	margin-top: 30px;
-	display: -ms-flexbox;
-	display: -webkit-flex;
+	margin-top: 1.5em;
+	margin-bottom: 1.5em;
 	display: flex; 
 	align-items: center
 }
@@ -224,35 +198,21 @@ a:active
 {
 	display: none;
     z-index: 1; 
-    background-color: #00e676 !important; 
-    color: #212121 !important; 
+    background-color: #D32F2F; 
+    color: #fff; 
     position: absolute; 
     top: -28px; 
     right: 5%
-}
-
-.desktop-fab-container
-{
-    height: 50%; 
-    width: 20%; 
-    position: absolute; 
-    top: 0; 
-    right: 0;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex; 
-    aliign-items: flex-end;
-    -webkit-align-items: flex-end;
-    justify-content: center;
-    -webkit-justify-content: center;
 }
        	
 .desktop-fab
 {
     z-index: 1; 
-    background-color: #00e676 !important; 
-    color: #212121 !important; 
-    margin-bottom: -28px;
+    background-color: #D32F2F; 
+    color: #fff; 
+    position: absolute; 
+    right: 5%; 
+    bottom: -28px;
 }	
 
 .empty-space
@@ -303,15 +263,7 @@ a:active
 
 @media (min-width: 800px) and (max-width: 1100px) 
 {
-    .content-card, .content-works
-    {
-        width: 70%
-    }
 
-    .desktop-fab-container
-    {
-        width: 15%
-    }
 
 }
 
@@ -319,8 +271,8 @@ a:active
 {
 	.content-card 
 	{
-        margin-top: 20%;
-		width:90%;
+		margin-top:45%;
+		width:100%;
 		padding:20px;
 	}
 	
@@ -337,7 +289,8 @@ a:active
 	.content-works
 	{		
 		margin-top: 0.5%;
-		width: 90%;
+		width: 100%;
+		padding: 10px;
 	}
 		
 	.works-card
@@ -357,18 +310,11 @@ a:active
 	{
 		font-size: 1.2em;
 	}
-
-    .screenshot-item
-    {
-        width: 49% !important;
-        margin-bottom: 10px;
-    }
-
 	
 	.content-card 
 	{
 		margin-top:45%;
-		width:95%;
+		width:100%;
 		padding:20px;
 	}
 	
@@ -390,7 +336,8 @@ a:active
 	.content-works
 	{		
 		margin-top: 0.5%;
-		width: 95%;
+		width: 100%;
+		padding: 10px;
 	}
 	
 	.works-card
